Fix signup modal on mobile.

--- a/app/assets/stylesheets/master.styl
+++ b/app/assets/stylesheets/master.styl
@@ -527,7 +527,7 @@ form
       .progress
         margin: 0 auto
         position: relative
-        width: 324px
+        width: 320px
         .typcn
           background-color: white
           color: teal
@@ -549,7 +549,7 @@ form
           display: inline-block
           height: 24px
           line-height: 24px
-          margin-left: 120px
+          margin-left: 118px
           position: relative
           text-align: center
           width: 24px
